--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>github博客</title>
     <link rel="stylesheet" href="https://yongma16.github.io/style.css">
   </head>
   <body>
-
+    <h1>博客网站</h1>
   </body>
 </html>
