--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>个人博客</title>
+<link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<!-- Main Container -->
+<div class="container"> 
+  <!-- Header -->
+  <header class="header">
+    <h4 class="logo">信念是精神之钙</h4>
+  </header>
+  <!-- Hero Section -->
+  <section class="intro">
+    <div class="column">
+      <h3>ymacode</h3>
+      <img src="images/myphotos/主页照片.jpg" alt="" class="profile"> </div>
+    <div class="column">
+		<br><br><br><br><br>
+      <p2>We are all in the gutter,but some of us are looking the stars.</p2>
+		<br><p2>我们都深处沟壑，但仍有人仰望着星空。</p2>
+    </div>
+  </section>
+  <!-- Stats Gallery Section -->
+  <div class="gallery">
+    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+      <h4>2020</h4>
+      <p class="tag">足迹</p>
+      <p class="text_column">只争朝夕</p>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+      <h4>2019</h4>
+      <p class="tag">足迹</p>
+      <p class="text_column">坚定</p>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+      <h4>2018</h4>
+      <p class="tag">我的足迹</p>
+      <p class="text_column">前进</p>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+      <h4>2017</h4>
+      <p class="tag">足迹</p>
+      <p class="text_column">不忘初心</p>
+    </div>
+  </div>
+  <div class="gallery">
+    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+      <h4>建模</h4>
+      <p class="tag">童年的金铁兽</p>
+      <p class="text_column">超喜欢金属感</p>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+      <h4>unity粒子特效</h4>
+      <p class="tag">unity3d</p>
+      <p class="text_column">酷酷的特效</p>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+      <h4>pr剪辑</h4>
+      <p class="tag">不想病</p>
+      <p class="text_column">千万不要颓废</p>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+      <h4>AI设计</h4>
+      <p class="tag">党的图标</p>
+      <p class="text_column">坚持中国特色社会主要道路</p>
+    </div>
+  </div>
+  <!-- Footer Section -->
+  <footer id="contact">
+    <p class="hero_header">我的简历</p>
+    <div class="button" herf="www.baidu.com">点击查看 </div>
+  </footer>
+  <!-- Copyrights Section -->
+  <div class="copyright" color="FFFF">&copy;2020-<strong>ymacode</strong></div>
+</div>
+<!-- Main Container Ends -->
+</body>
+</html>
 
