--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>个人博客</title>
-<link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<link href="https://yongma16.github.io/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <!-- Main Container -->
