主页路径修改

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section class="intro">
     <div class="column">
       <h3>ymacode</h3>
-      <img src="images/myphotos/主页照片.jpg" alt="" class="profile"> </div>
+      <img src="https://yongma16.github.io/images/myphotos/主页照片.jpg" alt="" class="profile"> </div>
     <div class="column">
 		<br><br><br><br><br>
       <p2>We are all in the gutter,but some of us are looking the stars.</p2>
