--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>个人博客</title>
-<link rel="shortcut icon" href="https://yongma16.github.io/images/logo/蒲公英.ico"/>
-<link rel="bookmark" href="https://yongma16.github.io/images/logo/蒲公英.ico"/>
+<link rel="shortcut icon" href="https://yongma16.github.io/images/logo/my_logo.ico"/>
+<link rel="bookmark" href="https://yongma16.github.io/images/logo/my_logo.ico"/>
 <link href="https://yongma16.github.io/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 <body>
