--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
   </section>
   <!-- Stats Gallery Section -->
   <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2020.jpg" alt="" width="2000" class="cards"/></a>
       <h4>2020</h4>
       <p class="tag">足迹</p>
       <p class="text_column">只争朝夕</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2019.jpg" alt="" width="2000" class="cards"/></a>
       <h4>2019</h4>
       <p class="tag">足迹</p>
       <p class="text_column">坚定</p>
