--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
       <p class="tag">足迹</p>
       <p class="text_column">坚定</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2018.jpg" alt="" width="2000" class="cards"/></a>
       <h4>2018</h4>
       <p class="tag">我的足迹</p>
       <p class="text_column">前进</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2017.jpg" alt="" width="2000" class="cards"/></a>
       <h4>2017</h4>
       <p class="tag">足迹</p>
       <p class="text_column">不忘初心</p>
     </div>
   </div>
   <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/robot.jpg" alt="" width="2000" class="cards"/></a>
       <h4>建模</h4>
       <p class="tag">童年的金铁兽</p>
       <p class="text_column">超喜欢金属感</p>
