--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <!-- Footer Section -->
   <footer id="contact">
     <p class="hero_header">我的简历</p>
-    <div class="button" herf="www.baidu.com">点击查看 </div>
+	  <div class="button"><a href="https://yongma16.github.io/introduce/my_introduction.html">点击查看</a></div>
   </footer>
   <!-- Copyrights Section -->
   <div class="copyright" color="FFFF">&copy;2020-<strong>ymacode</strong></div>
