--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Resume Page Template</title>
     <!-- Bootstrap -->
-    <link href="css/bootstrap-4.2.1.css" rel="stylesheet">
+    <link href="https://yongma16.github.io/css/bootstrap-4.2.1.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -229,9 +229,9 @@
       </footer>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="https://yongma16.github.io/javascripts/jquery-3.3.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap-4.2.1.js"></script>
+    <script src="https://yongma16.github.io/javascripts/popper.min.js"></script>
+    <script src="https://yongma16.github.io/javascripts/bootstrap-4.2.1.js"></script>
   </body>
 </html>
