--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Resume Page Template</title>
+    <title>马勇的简历</title>
     <!-- Bootstrap -->
     <link href="https://yongma16.github.io/css/bootstrap-4.2.1.css" rel="stylesheet">
   </head>
