--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>马勇的简历</title>
+    <link rel="shortcut icon" href="https://yongma16.github.io/images/logo/my_logo.ico"/>
     <!-- Bootstrap -->
     <link href="https://yongma16.github.io/css/bootstrap-4.2.1.css" rel="stylesheet">
   </head>
