--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -151,7 +151,7 @@
           <ul>
             <li>学习建模，遇到许多大佬有时候在通宵建模，更加坚定了我学习的重要性，学习之树需要汗水来灌溉</li>
             <li>认识到创新的重要性</li>
-            <li>收获：永远不要停止学习与思考</li>
+            <li>收获：坚持学习与思考</li>
           </ul>
         </div>
 
@@ -161,7 +161,7 @@
               <h5>跨媒体视频训练营</h5>
             </div>
             <div class="col-6">
-              <h5 class="text-right"><span aria-hidden="true"></span>2019年下半年（大四）</h5>
+              <h5 class="text-right"><span aria-hidden="true"></span>2019下半年（大四）</h5>
             </div>
           </div>
           <h5><span class="badge badge-secondary">惠科集团联合学校举办</span></h5>
