--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -143,7 +143,7 @@
               <h5>致极CG学习</h5>
             </div>
             <div class="col-6">
-              <h5 class="text-right"><span aria-hidden="true"></span>2019上半年（大三上学期）</h5>
+              <h5 class="text-right"><span aria-hidden="true"></span>2019上半年（大三）</h5>
             </div>
           </div>
           <h5><span class="badge badge-secondary">安顺市举办</span></h5>
