--- a/index.html
+++ b/index.html
@@ -28,29 +28,29 @@
   </section>
   <!-- Stats Gallery Section -->
   <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2020.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2020.jpg" alt="" width="1800" height="1200" class="cards"/></a>
       <h4>2020</h4>
       <p class="tag">足迹</p>
       <p class="text_column">只争朝夕</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2019.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2019.jpg" alt="" width="720" height="960" class="cards"/></a>
       <h4>2019</h4>
       <p class="tag">足迹</p>
       <p class="text_column">坚定</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2018.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2018.jpg" alt="" width="1080" height="1440" class="cards"/></a>
       <h4>2018</h4>
       <p class="tag">我的足迹</p>
       <p class="text_column">前进</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2017.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2017.jpg" alt="" width="1125" height="750" class="cards"/></a>
       <h4>2017</h4>
       <p class="tag">足迹</p>
       <p class="text_column">不忘初心</p>
     </div>
   </div>
   <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/robot.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/robot.jpg" alt="" width="1620" height="1080" class="cards"/></a>
       <h4>建模</h4>
       <p class="tag">童年的金铁兽</p>
       <p class="text_column">超喜欢金属感</p>
