--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
       <p class="tag">童年的金铁兽</p>
       <p class="text_column">超喜欢金属感</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/particular.jpg" alt="" width="2000" class="cards"/></a>
       <h4>unity粒子特效</h4>
       <p class="tag">unity3d</p>
       <p class="text_column">酷酷的特效</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/ill.jpg" alt="" width="2000" class="cards"/></a>
       <h4>pr剪辑</h4>
       <p class="tag">不想病</p>
       <p class="text_column">千万不要颓废</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>AI设计</h4>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.ico" alt="" width="2000" class="cards"/></a>
+      <h4>AI</h4>
       <p class="tag">党的图标</p>
-      <p class="text_column">坚持中国特色社会主要道路</p>
+      <p class="text_column">富强 民主 文明 和谐</p>
     </div>
   </div>
   <!-- Footer Section -->
