--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <p class="tag">不想病</p>
       <p class="text_column">千万不要颓废</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.ico" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.png" alt="" width="2000" class="cards"/></a>
       <h4>AI</h4>
       <p class="tag">党的图标</p>
       <p class="text_column">富强 民主 文明 和谐</p>
