--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
       <p class="tag">unity3d</p>
       <p class="text_column">酷酷的特效</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/ill.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/ill.jpg" alt="" width="962" height="960" class="cards"/></a>
       <h4>pr剪辑</h4>
       <p class="tag">不想病</p>
       <p class="text_column">千万不要颓废</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.png" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.png" alt="" width="430" heght="429" class="cards"/></a>
       <h4>AI</h4>
       <p class="tag">党的图标</p>
       <p class="text_column">富强 民主 文明 和谐</p>
