--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
     </div>
     <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.png" alt="" width="430" heght="429" class="cards"/></a>
       <h4>AI</h4>
-      <p class="tag">党的图标</p>
+      <p class="tag">心中有党，成绩理想</p>
       <p class="text_column">富强 民主 文明 和谐</p>
     </div>
   </div>
   <!-- Footer Section -->
   <footer id="contact">
-    <p class="hero_header">我的简历</p>
-	  <div class="button"><a href="https://yongma16.github.io/introduce/my_introduction.html">点击查看</a></div>
+    <p class="hero_header"><a href="https://yongma16.github.io/introduce/my_introduction.html"> 我的简历</a></p>
+<!-- 	  <div class="button"><a href="https://yongma16.github.io/introduce/my_introduction.html">点击查看</a></div> -->
   </footer>
   <!-- Copyrights Section -->
   <div class="copyright" color="FFFF">&copy;2020-<strong>ymacode</strong></div>
