--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -67,7 +67,7 @@
             </div>
           </div>
           <h5><span class="badge badge-secondary">csp之路</span></h5>
-          <p>报名csp考试之后，在深夜里看csp和力扣的题目，看懂一个题的代码会莫名的欣喜，自己写代码通过时有着热血沸腾地冲动,考csp200分还在努力考</p>
+          <p>报名csp考试之后，在深夜里看csp和力扣的题目，看懂一个题的代码会莫名的欣喜，自己写代码通过时有着热血沸腾地冲动,考csp200分。前进、前进、前进</p>
         </div>
         <div class="col-md-6 col-sm-12">
           <h2>专业技能</h2>
