--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -14,7 +14,7 @@
       <hr>
       <div class="row">
         <div class="col-6">
-          <h1>马勇</h1>
+          <h2>马勇</h2>
         </div>
         <div class="col-6">
           <p class="text-right"><a href="">下载我的简历</a></p>
@@ -34,7 +34,7 @@
         <div class="col-md-4 col-sm-12">
           <div class="row justify-content-md-around m-1">
             <address>
-              <strong>马勇</strong><br>
+              姓名拼音：mayong<br>
               出生日期：1998-08-22<br>
               出生地：贵州省安顺市关岭县白水镇<br>
               <abbr title="Phone">电话号码:</abbr> 17685043634<br>
