--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -53,7 +53,7 @@
               <h4>大学生涯</h4>
             </div>
             <div class="col-6">
-              <h5 class="text-right"><span aria-hidden="true"></span> 2016年9月——2020年7月</h5>
+              <h5 class="text-right"><span aria-hidden="true"></span> 2016.09—2020.07</h5>
             </div>
           </div>
           <h5><span class="badge badge-secondary">学习经历</span></h5>
@@ -63,11 +63,11 @@
               <h4>编程思想觉醒</h4>
             </div>
             <div class="col-6">
-              <h5 class="text-right"><span aria-hidden="true"></span>2019年初开始</h5>
+              <h5 class="text-right"><span aria-hidden="true"></span>2019</h5>
             </div>
           </div>
           <h5><span class="badge badge-secondary">csp之路</span></h5>
-          <p>报名csp考试之后，在深夜里看csp和力扣的题目，看懂一个题的代码会莫名的欣喜，自己写代码通过时有着热血沸腾地冲动,考csp200分。前进、前进、前进</p>
+          <p>自从报名csp考试之后，在深夜里看csp和力扣的题目，看懂一个题的代码会莫名的欣喜，自己写代码通过时有着热血沸腾地冲动,考csp200分，在csdn写博客记录下自己的代码。前进、前进、前进</p>
         </div>
         <div class="col-md-6 col-sm-12">
           <h2>专业技能</h2>
