--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -36,7 +36,7 @@
             <address>
               姓名拼音：mayong<br>
               出生日期：1998-08-22<br>
-              出生地：贵州省安顺市关岭县白水镇<br>
+              出生地：贵州省安顺市关岭县白水镇翁寨村硐口组<br>
               <abbr title="Phone">电话号码:</abbr> 17685043634<br>
               <a href="mailto:#">1432448610@qq.com</a>
             </address>
