--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h4 class="logo">信念是精神之钙</h4>
   </header>
   <!-- Hero Section -->
-  <section class="intro">
+<!--   <section class="intro"> -->
     <div class="column">
       <h3>ymacode</h3>
       <img src="https://yongma16.github.io/images/myphotos/master.jpg" alt="" class="profile"> </div>
@@ -26,10 +26,10 @@
       <p2>We are all in the gutter,but some of us are looking the stars.</p2>
 		<br><p2>我们都深处沟壑，但仍有人仰望着星空。</p2>
     </div>
-  </section>
+<!--   </section> -->
   <!-- Stats Gallery Section -->
   <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2020.jpg" alt="" width="1800" height="1200" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2020.jpg" alt="" class="cards"/></a>
       <h4>2020</h4>
       <p class="tag">足迹</p>
       <p class="text_column">只争朝夕</p>
