--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <img src="https://yongma16.github.io/images/myphotos/master.jpg" alt="" class="profile"> </div>
     <div class="column">
 	    <h4></h4>
-		<br><br><br><br><br>
+		<br><br><br>
       <p2>We are all in the gutter,but some of us are looking the stars.</p2>
 		<br><p2>我们都深处沟壑，但仍有人仰望着星空。</p2>
     </div>
 <!--   </section> -->
   <!-- Stats Gallery Section -->
-  <div class="gallery">
+<!--   <div class="gallery"> -->
     <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2020.jpg" alt="" class="cards"/></a>
       <h4>2020</h4>
       <p class="tag">足迹</p>
@@ -49,8 +49,8 @@
       <p class="tag">足迹</p>
       <p class="text_column">不忘初心</p>
     </div>
-  </div>
-  <div class="gallery">
+<!--   </div> -->
+<!--   <div class="gallery"> -->
     <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/robot.jpg" alt="" class="cards"/></a>
       <h4>建模</h4>
       <p class="tag">童年的金铁兽</p>
@@ -71,7 +71,7 @@
       <p class="tag">心中有党，成绩理想</p>
       <p class="text_column">富强 民主 文明 和谐</p>
     </div>
-  </div>
+<!--   </div> -->
   <!-- Footer Section -->
   <footer id="contact">
     <p class="hero_header"><a href="https://yongma16.github.io/introduce/my_introduction.html"> 我的简历</a></p>
