--- a/index.html
+++ b/index.html
@@ -30,44 +30,44 @@
   <!-- Stats Gallery Section -->
 <!--   <div class="gallery"> -->
     <br><br>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2020.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2020.jpg" alt="2020照片" class="cards"/></a>
       <h4>2020</h4>
       <p class="tag">足迹</p>
       <p class="text_column">只争朝夕</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2019.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2019.jpg" alt="2019照片" class="cards"/></a>
       <h4>2019</h4>
       <p class="tag">足迹</p>
       <p class="text_column">坚定</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2018.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2018.jpg" alt="2018照片" class="cards"/></a>
       <h4>2018</h4>
       <p class="tag">我的足迹</p>
       <p class="text_column">前进</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2017.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2017.jpg" alt="2017照片" class="cards"/></a>
       <h4>2017</h4>
       <p class="tag">足迹</p>
       <p class="text_column">不忘初心</p>
     </div>
 <!--   </div> -->
 <!--   <div class="gallery"> -->
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/robot.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/robot.jpg" alt="建模图片" class="cards"/></a>
       <h4>建模</h4>
       <p class="tag">童年的金铁兽</p>
       <p class="text_column">超喜欢金属感</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/粒子属性.jpg" alt=""  class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/粒子属性.jpg" alt="粒子图片"  class="cards"/></a>
       <h4>unity粒子特效</h4>
       <p class="tag">unity3d</p>
       <p class="text_column">酷酷的特效</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/ill.jpg" alt=""  class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/ill.jpg" alt="剪辑封面"  class="cards"/></a>
       <h4>pr剪辑</h4>
       <p class="tag">不想病</p>
       <p class="text_column">千万不要颓废</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.png" alt=""  class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.png" alt="党的图标"  class="cards"/></a>
       <h4>AI</h4>
       <p class="tag">心中有党，成绩理想</p>
       <p class="text_column">富强 民主 文明 和谐</p>
@@ -75,6 +75,12 @@
 <!--   </div> -->
   <!-- Footer Section -->
   <footer id="contact">
+	  <br>
+	  <a href="https://weibo.com/u/5753833558">新浪微博</a>
+	  <br>
+	  <a href="https://me.csdn.net/qq_38870145">csdn</a>
+	  <br>
+	  <a href="https://space.bilibili.com/173487425">哔哩哔哩</a>
     <p class="hero_header"><a href="https://yongma16.github.io/introduce/my_introduction.html"> 我的简历</a></p>
 <!-- 	  <div class="button"><a href="https://yongma16.github.io/introduce/my_introduction.html">点击查看</a></div> -->
   </footer>
