--- a/index.html
+++ b/index.html
@@ -29,42 +29,50 @@
 <!--   </section> -->
   <!-- Stats Gallery Section -->
 <!--   <div class="gallery"> -->
-    <br><br>
-      <a href="#"><img src="https://yongma16.github.io/images/myphotos/2020.jpg" alt="2020照片" class="cards"/></a>
+  <div class="gallery">
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2020.jpg" alt="2020" width="1800" height="1200" class="cards"/></a>
       <h4>2020</h4>
       <p class="tag">足迹</p>
       <p class="text_column">只争朝夕</p>
-      <a href="#"><img src="https://yongma16.github.io/images/myphotos/2019.jpg" alt="2019照片" class="cards"/></a>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2019.jpg" alt="2019" width="720" height="960" class="cards"/></a>
       <h4>2019</h4>
       <p class="tag">足迹</p>
       <p class="text_column">坚定</p>
     </div>
-    <a href="#"><img src="https://yongma16.github.io/images/myphotos/2018.jpg" alt="2018照片" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2018.jpg" alt="2018" width="1080" height="1440" class="cards"/></a>
       <h4>2018</h4>
       <p class="tag">我的足迹</p>
       <p class="text_column">前进</p>
-      <a href="#"><img src="https://yongma16.github.io/images/myphotos/2017.jpg" alt="2017照片" class="cards"/></a>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2017.jpg" alt="2017" width="1125" height="750" class="cards"/></a>
       <h4>2017</h4>
       <p class="tag">足迹</p>
       <p class="text_column">不忘初心</p>
-<!--   </div> -->
-<!--   <div class="gallery"> -->
-     <a href="#"><img src="https://yongma16.github.io/images/myphotos/robot.jpg" alt="建模图片" class="cards"/></a>
+    </div>
+  </div>
+  <div class="gallery">
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/robot.jpg" alt="建模图片" width="1620" height="1080" class="cards"/></a>
       <h4>建模</h4>
       <p class="tag">童年的金铁兽</p>
       <p class="text_column">超喜欢金属感</p>
-    <a href="#"><img src="https://yongma16.github.io/images/myphotos/粒子属性.jpg" alt="粒子图片"  class="cards"/></a>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/粒子属性.jpg" alt="粒子图片" width="2000" class="cards"/></a>
       <h4>unity粒子特效</h4>
       <p class="tag">unity3d</p>
       <p class="text_column">酷酷的特效</p>
-    <a href="#"><img src="https://yongma16.github.io/images/myphotos/ill.jpg" alt="剪辑封面"  class="cards"/></a>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/ill.jpg" alt="剪辑图片" width="962" height="960" class="cards"/></a>
       <h4>pr剪辑</h4>
       <p class="tag">不想病</p>
       <p class="text_column">千万不要颓废</p>
-    <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.png" alt="党的图标"  class="cards"/></a>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.png" alt="党标" width="430" heght="429" class="cards"/></a>
       <h4>AI</h4>
       <p class="tag">心中有党，成绩理想</p>
       <p class="text_column">富强 民主 文明 和谐</p>
+    </div>
+  </div>
 <!--   </div> -->
   <!-- Footer Section -->
   <footer id="contact">
