--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
       <img src="https://yongma16.github.io/images/myphotos/master.jpg" alt="" class="profile"> </div>
     <div class="column">
 	    <h4></h4>
-		<br><br><br>
+		<br><br>
       <p2>We are all in the gutter,but some of us are looking the stars.</p2>
-		<br><p2>我们都深处沟壑，但仍有人仰望着星空。</p2>
+		<br><p2>我们都深处沟壑,但仍有人仰望着星空~</p2>
+	    <br>
     </div>
 <!--   </section> -->
   <!-- Stats Gallery Section -->
@@ -76,11 +77,8 @@
 <!--   </div> -->
   <!-- Footer Section -->
   <footer id="contact">
-	  <br>
 	  <p><a href="https://weibo.com/u/5753833558">新浪微博</a></p>
-	  <br>
 	  <p><a href="https://me.csdn.net/qq_38870145">csdn</a></p>
-	  <br>
 	  <p><a href="https://space.bilibili.com/173487425">哔哩哔哩</a></p>
     <p class="hero_header"><a href="https://yongma16.github.io/introduce/my_introduction.html"> 我的简历</a></p>
 <!-- 	  <div class="button"><a href="https://yongma16.github.io/introduce/my_introduction.html">点击查看</a></div> -->
