--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<br><br>
       <p2>We are all in the gutter,but some of us are looking the stars.</p2>
 		<br><p2>我们都深处沟壑,但仍有人仰望着星空~</p2>
-	    <br>
     </div>
+	<br><br>
 <!--   </section> -->
   <!-- Stats Gallery Section -->
 <!--   <div class="gallery"> -->
@@ -77,15 +77,15 @@
 <!--   </div> -->
   <!-- Footer Section -->
   <footer id="contact">
-	  <p><a href="https://weibo.com/u/5753833558">新浪微博</a></p>
-	  <p><a href="https://me.csdn.net/qq_38870145">csdn</a></p>
-	  <p><a href="https://space.bilibili.com/173487425">哔哩哔哩</a></p>
+	  <p><a href="https://weibo.com/u/5753833558">  新浪微博</a></p>
+	  <p><a href="https://me.csdn.net/qq_38870145">  csdn</a></p>
+	  <p><a href="https://space.bilibili.com/173487425">  哔哩哔哩</a></p>
     <p class="hero_header"><a href="https://yongma16.github.io/introduce/my_introduction.html"> 我的简历</a></p>
 <!-- 	  <div class="button"><a href="https://yongma16.github.io/introduce/my_introduction.html">点击查看</a></div> -->
   </footer>
   <!-- Copyrights Section -->
-  <div class="copyright" color="FFFF">&copy;2020-<strong>ymacode</strong></div>
-</div>
+<!--   <div class="copyright" color="FFFF">&copy;2020-<strong>ymacode</strong></div>
+</div> -->
 <!-- Main Container Ends -->
 </body>
 </html>
