--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container"> 
   <!-- Header -->
   <header class="header">
-    <h4 class="logo">信念是精神之钙</h4>
+    <h4 class="logo">个人博客</h4>
   </header>
   <!-- Hero Section -->
 <!--   <section class="intro"> -->
@@ -24,7 +24,7 @@
 	    <h4></h4>
 		<br><br>
       <p2>We are all in the gutter,but some of us are looking the stars.</p2>
-		<br><p2>我们都深处沟壑,但仍有人仰望着星空~</p2>
+		<br><p2>我们都深处沟壑,但仍有人仰望着星空~</p2><br>
     </div>
 	<br><br>
 <!--   </section> -->
@@ -58,12 +58,12 @@
       <p class="tag">童年的金铁兽</p>
       <p class="text_column">超喜欢金属感</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/粒子属性.jpg" alt="粒子图片" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/粒子属性.jpg" alt="粒子图片" width="430" height="429" class="cards"/></a>
       <h4>unity粒子特效</h4>
       <p class="tag">unity3d</p>
       <p class="text_column">酷酷的特效</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/ill.jpg" alt="剪辑图片" width="962" height="960" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/ill.jpg" alt="剪辑图片" width="430" height="429" class="cards"/></a>
       <h4>pr剪辑</h4>
       <p class="tag">不想病</p>
       <p class="text_column">千万不要颓废</p>
