--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <img src="https://yongma16.github.io/images/myphotos/master.jpg" alt="" class="profile"> </div>
     <div class="column">  
      <br><br>
-      <p2>We are all in the gutter,but some of us are looking the stars.</p2>
-		<br><p2>我们都深处沟壑,但仍有人仰望着星空~</p2><br>
+      <p2><strong>We are all in the gutter,but some of us are looking the stars.</strong></p2>
+		<br><br><p>我们都深处沟壑,但仍有人仰望着星空~</p><br>
     </div>
 	<br><br>
 <!--   </section> -->
