--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/ill.jpg" alt="剪辑图片" width="430" height="429" class="cards"/></a>
       <h4>pr剪辑</h4>
       <p class="tag">不想病</p>
-      <p class="text_column">千万不要颓废</p>
+      <p class="text_column">自强不息</p>
     </div>
     <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.png" alt="党标" width="430" heght="429" class="cards"/></a>
       <h4>AI</h4>
@@ -74,17 +74,17 @@
     </div>
   </div>
 <!--   </div> -->
-  <!-- Footer Section -->
+<!--   Footer Section -->
   <footer id="contact">
 	  <p><a href="https://weibo.com/u/5753833558">  新浪微博</a></p>
 	  <p><a href="https://me.csdn.net/qq_38870145">  csdn</a></p>
 	  <p><a href="https://space.bilibili.com/173487425">  哔哩哔哩</a></p>
-    <p class="hero_header"><a href="https://yongma16.github.io/introduce/my_introduction.html"> 我的简历</a></p>
+    <p class="hero_header"><a href="https://yongma16.github.io/introduce/my_introduction.html">我的简历</a></p>
 <!-- 	  <div class="button"><a href="https://yongma16.github.io/introduce/my_introduction.html">点击查看</a></div> -->
   </footer>
-  <!-- Copyrights Section -->
-<!--   <div class="copyright" color="FFFF">&copy;2020-<strong>ymacode</strong></div>
-</div> -->
+  Copyrights Section
+  <div class="copyright" color="FFFF">&copy;2020-<strong>ymacode</strong></div>
+</div>
 <!-- Main Container Ends -->
 </body>
 </html>
