--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -178,14 +178,14 @@
       <hr>
       <div class="container">
         <div class="row text-center">
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="images/300X200.gif" alt=""></div>
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="images/300X200.gif" alt=""></div>
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="images/300X200.gif" alt=""></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="https://yongma16.github.io/lifeimages/2018-05.jpg" alt="2018-05"></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="https://yongma16.github.io/lifeimages/2018-11.jpg" alt="2018-11"></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="https://yongma16.github.io/lifeimages/2019-04.jpg" alt="2019-04"></div>
         </div>
         <div class="row text-center">
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="images/300X200.gif" alt=""></div>
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="images/300X200.gif" alt=""></div>
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="images/300X200.gif" alt=""></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="https://yongma16.github.io/lifeimages/2019-12.jpg" alt="2019-12"></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="https://yongma16.github.io/lifeimages/2019.jpg" alt="2019"></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="https://yongma16.github.io/lifeimages/2020-01.jpg" alt="2020-01"></div>
         </div>
       </div>
       <hr>
