错别字改正

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="column">  
      <br><br>
       <p2><strong>We are all in the gutter,but some of us are looking the stars.</strong></p2>
-		<br><br><p>我们都深处沟壑,但仍有人仰望着星空~</p><br>
+		<br><br><p>我们都身处沟壑,但仍有人仰望着星空~</p><br>
     </div>
 	<br><br>
 <!--   </section> -->
