--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 	  <p><a href="https://me.csdn.net/qq_38870145">  csdn</a></p>
 	  <p><a href="https://space.bilibili.com/173487425">  哔哩哔哩</a></p>
     <p class="hero_header"><a href="https://yongma16.github.io/introduce/my_introduction.html">我的简历</a></p> -->
-	  &emsp;&emsp;&emsp;&emsp;<button style="font-weight:bold" color:"azure" href="https://weibo.com/u/5753833558">新浪微博</button><br><br>
-	  &emsp;&emsp;&emsp;&emsp;<button style="font-weight:bold" href="https://space.bilibili.com/173487425">哔哩哔哩</button><br><br>
-	  &emsp;&emsp;&emsp;&emsp;<button style="font-weight:bold" href="https://me.csdn.net/qq_38870145">CSDN</button>
-    <p class="hero_header"><button style="font-weight:bolder" href="https://yongma16.github.io/introduce/my_introduction.html">我的简历</button></p>
+	  &emsp;&emsp;&emsp;&emsp;<a class="button" style="font-weight:bold" href="https://weibo.com/u/5753833558">新浪微博</a><br><br>
+	  &emsp;&emsp;&emsp;&emsp;<a class="button" style="font-weight:bold" href="https://space.bilibili.com/173487425">哔哩哔哩</a><br><br>
+	  &emsp;&emsp;&emsp;&emsp;<a class="button" style="font-weight:bold" href="https://me.csdn.net/qq_38870145">CSDN</a>
+    <p class="hero_header"><a class="button" style="font-weight:bolder" href="https://yongma16.github.io/introduce/my_introduction.html">我的简历</a></p>
 <!-- 	  <div class="button"><a href="https://yongma16.github.io/introduce/my_introduction.html">点击查看</a></div> -->
   </footer>
   <div class="copyright" color="FFFF">&copy;2020&<strong>ymacode</strong></div>
