--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <!--   <section class="intro"> -->
     <div class="column">
       <h3>ymacode</h3>
-      <img src="https://yongma16.github.io/images/myphotos/master.jpg" alt="" class="profile"> </div>
+      <img src="https://yongma16.github.io/images/myphotos/master.jpg" alt="博客的照片" class="profile"> </div>
     <div class="column">  
-     <br><br>
+     <br><br><br><br>
       <p2><strong>We are all in the gutter,but some of us are looking the stars.</strong></p2>
 		<br><br><p>我们都身处沟壑,但仍有人仰望着星空~</p><br>
     </div>
-	<br><br>
+	
 	
 <!--   </section> -->
   <!-- Stats Gallery Section -->
@@ -78,10 +78,6 @@
 <!--   </div> -->
 <!--   Footer Section -->
   <footer id="contact">
-<!-- 	  <p><a href="https://weibo.com/u/5753833558">  新浪微博</a></p>
-	  <p><a href="https://me.csdn.net/qq_38870145">  csdn</a></p>
-	  <p><a href="https://space.bilibili.com/173487425">  哔哩哔哩</a></p>
-    <p class="hero_header"><a href="https://yongma16.github.io/introduce/my_introduction.html">我的简历</a></p> -->
 	  &emsp;&emsp;<a style="font-weight:bold" href="https://weibo.com/u/5753833558">新浪微博</a><br><br>
 	  &emsp;&emsp;<a style="font-weight:bold" href="https://space.bilibili.com/173487425">哔哩哔哩</a><br><br>
 	  &emsp;&emsp;<a style="font-weight:bold" href="https://me.csdn.net/qq_38870145">CSDN</a>
