--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -17,7 +17,7 @@
           <h2>马勇</h2>
         </div>
         <div class="col-6">
-          <p class="text-right"><a href="">下载我的简历</a></p>
+          <p class="text-right">简历</p>
         </div>
       </div>
       <hr>
