--- a/index.html
+++ b/index.html
@@ -37,39 +37,39 @@
       <p class="tag">博学楼老操场合照</p>
       <p class="text_column">树莓派的男孩</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2019.jpg" alt="2019" width="720" height="960" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2019.jpg" alt="2019" width="1800" height="1200" class="cards"/></a>
       <h4>2019</h4>
       <p class="tag">图书馆老胡随手拍</p>
       <p class="text_column">当时在复习考研</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2018.jpg" alt="2018" width="1080" height="1440" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2018.jpg" alt="2018" width="1800" height="1200" class="cards"/></a>
       <h4>2018</h4>
       <p class="tag">军训的时光</p>
       <p class="text_column">拿着模型枪的激动心情</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2017.jpg" alt="2017" width="1125" height="750" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/2017.jpg" alt="2017" width="1800" height="1200" class="cards"/></a>
       <h4>2017</h4>
       <p class="tag">有烟花的跨年合照</p>
-      <p class="text_column">和331室友看烟花</p>
+      <p class="text_column">2017年跨年夜在西区</p>
     </div>
   </div>
   <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/robot.jpg" alt="建模图片" width="1620" height="1080" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/robot.jpg" alt="金铁兽图片" width="1800" height="1200" class="cards"/></a>
       <h4>建模</h4>
       <p class="tag">使用maya建模还原童年的金铁兽</p>
       <p class="text_column">初步认识三渲二</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/粒子属性.jpg" alt="粒子图片" width="430" height="429" class="cards"/></a>
-      <h4>unity粒子特效</h4>
-      <p class="tag">unity3d大作业的particular</p>
-      <p class="text_column">火焰和黑烟的特效</p>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/guitar_model.jpg" alt="吉它图片" width="1800" height="1200" class="cards"/></a>
+      <h4>maya模型</h4>
+      <p class="tag">吉它</p>
+      <p class="text_column">guitar</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/ill.jpg" alt="剪辑图片" width="430" height="429" class="cards"/></a>
-      <h4>pr剪辑</h4>
-      <p class="tag">动画我是江小白里面《不想病》剪辑</p>
-      <p class="text_column">动漫</p>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/myphotos/sword_model.jpg" alt="剑图片" width="1800" height="1200" class="cards"/></a>
+      <h4>saber剑</h4>
+      <p class="tag">模型</p>
+      <p class="text_column">锋利感</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.png" alt="党标" width="430" heght="429" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="https://yongma16.github.io/images/logo/willpower.png" alt="党标" width="1800" height="1200" class="cards"/></a>
       <h4>AI描绘党的图案</h4>
       <p class="tag">心中有党，成绩理想</p>
       <p class="text_column">自由 平等 文明 和谐</p>
