--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
 <div class="container"> 
   <!-- Header -->
   <header class="header">
-    <h4 class="logo">个人博客</h4>
+    <h4 class="logo">个人博客
+	  <div class="middle">
+		<div class="bar bar1"></div>
+		<div class="bar bar2"></div>
+		<div class="bar bar3"></div>
+		<div class="bar bar4"></div>
+		<div class="bar bar5"></div>
+		<div class="bar bar6"></div>
+		<div class="bar bar7"></div>
+		<div class="bar bar8"></div>
+	</div>
+		</h4>
   </header>
   <!-- Hero Section -->
 <!--   <section class="intro"> -->
