全部修改为相对路径

--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>马勇的简历</title>
-    <link rel="shortcut icon" href="https://yongma16.github.io/images/logo/my_logo.ico"/>
+    <link rel="shortcut icon" href="images/logo/my_logo.ico"/>
     <!-- Bootstrap -->
-    <link href="https://yongma16.github.io/css/bootstrap-4.2.1.css" rel="stylesheet">
+    <link href="css/bootstrap-4.2.1.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -178,14 +178,14 @@
       <hr>
       <div class="container">
         <div class="row text-center">
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="https://yongma16.github.io/lifeimages/2018-05.jpg" alt="2018-05"></div>
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="https://yongma16.github.io/lifeimages/2018-11.jpg" alt="2018-11"></div>
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="https://yongma16.github.io/lifeimages/2019-04.jpg" alt="2019-04"></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="lifeimages/2018-05.jpg" alt="2018-05"></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="lifeimages/2018-11.jpg" alt="2018-11"></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="lifeimages/2019-04.jpg" alt="2019-04"></div>
         </div>
         <div class="row text-center">
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="https://yongma16.github.io/lifeimages/2019-12.jpg" alt="2019-12"></div>
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="https://yongma16.github.io/lifeimages/2019.jpg" alt="2019"></div>
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="https://yongma16.github.io/lifeimages/2020-01.jpg" alt="2020-01"></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="lifeimages/2019-12.jpg" alt="2019-12"></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="lifeimages/2019.jpg" alt="2019"></div>
+          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="lifeimages/2020-01.jpg" alt="2020-01"></div>
         </div>
       </div>
       <hr>
@@ -230,9 +230,9 @@
       </footer>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://yongma16.github.io/javascripts/jquery-3.3.1.min.js"></script>
+    <script src="javascripts/jquery-3.3.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://yongma16.github.io/javascripts/popper.min.js"></script>
-    <script src="https://yongma16.github.io/javascripts/bootstrap-4.2.1.js"></script>
+    <script src="javascripts/popper.min.js"></script>
+    <script src="javascripts/bootstrap-4.2.1.js"></script>
   </body>
 </html>
