改为相对路径

--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -24,7 +24,7 @@
       <div class="row">
         <div class="col-md-8 col-sm-12">
           <div class="media">
-            <img class="mr-3" src="https://yongma16.github.io/images/awsl/mayong.jpg" alt="Generic placeholder image">
+            <img class="mr-3" src="images/awsl/mayong.jpg" alt="Generic placeholder image">
             <div class="media-body">
               <h5 class="mt-0">贵州大学   计算机科学与技术学院  数字媒体技术</h5>
 				<p>个人宣言：Things have a way of working themselves out.</p>
