修改一点文字的信息

--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -108,7 +108,7 @@
               <h5 class="text-right"><span aria-hidden="true"></span>2017年暑假（大一）</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">安顺市举办</span></h5>
+          <h5><span class="badge badge-secondary">安顺市黄蜡乡</span></h5>
           <p>分配至安顺市黄腊乡</p>
           <ul>
             <li>将精准扶贫的纸质文档录入精准扶贫电子文档</li>
@@ -127,11 +127,11 @@
             </div>
           </div>
           <h5><span class="badge badge-secondary">贵州大学银鸽社团举办</span></h5>
-          <p>前往贵州省遵义市镇南镇上的镇南完小进行暑期公益支教活动，遇到很多优秀的队员</p>
+          <p>前往贵州省遵义市镇南镇上的镇南完小进行暑期公益支教活动，很幸运遇到优秀的队友</p>
           <ul>
-            <li>担任三年级的班主任</li>
-            <li>教安全教育于自然科学两节课</li>
-            <li>收获：团队的重要性，对待每一件事情须留心与耐心</li>
+            <li>负责小学三年级</li>
+            <li>传授关于安全教育于自然科学的知识</li>
+            <li>收获：团队的重要性，对待每一件事情须留心且耐心</li>
           </ul>
         </div>
       </div>
@@ -146,9 +146,10 @@
               <h5 class="text-right"><span aria-hidden="true"></span>2019上半年（大三）</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">安顺市举办</span></h5>
-          <p>工作室致极CG</p>
+          <h5><span class="badge badge-secondary">工作室致极CG</span></h5>
+          <p>学习接外包</p>
           <ul>
+	    <li>有一次maya课，当时是在做吉它的模型，老师问我对建模是否有兴趣,可以去致极CG(他建立的工作室)学习,然后就去了，时间：两个月</li>
             <li>学习建模，遇到许多大佬有时候在通宵建模，更加坚定了我学习的重要性，学习之树需要汗水来灌溉</li>
             <li>认识到创新的重要性</li>
             <li>收获：坚持学习与思考</li>
@@ -164,9 +165,10 @@
               <h5 class="text-right"><span aria-hidden="true"></span>2019下半年（大四）</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">惠科集团联合学校举办</span></h5>
+          <h5><span class="badge badge-secondary">惠科集团联合学校举办的实训课程</span></h5>
           <p>博学楼801进行两个周的视频创意剪辑</p>
           <ul>
+	    <li>趣味性的课程，认识团建活动与如何发展创意思维</li>
             <li>负责：制作片头特效</li>
             <li>参与视频合成</li>
             <li>收获：团队的重要性，多聆听别人的意见</li>
