再次修改文字

--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -146,7 +146,7 @@
               <h5 class="text-right"><span aria-hidden="true"></span>2019上半年（大三）</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">工作室致极CG</span></h5>
+          <h5><span class="badge badge-secondary">致极CG工作室</span></h5>
           <p>学习接外包</p>
           <ul>
 	    <li>有一次maya课，当时是在做吉它的模型，老师问我对建模是否有兴趣,可以去致极CG(他建立的工作室)学习,然后就去了，时间：两个月</li>
