--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -38,7 +38,8 @@
               出生日期：1998-08-22<br>
               出生地：贵州省安顺市关岭县白水镇翁寨村硐口组<br>
               <abbr title="Phone">电话号码:</abbr> 17685043634<br>
-              <a href="mailto:#">1432448610@qq.com</a>
+              <abbr title="Phone">邮箱：1432448610@qq.com</abbr><br>
+	      <p>个人主页：</p><a href="https://yongma16.github.io/">https://yongma16.github.io/</a>
             </address>
           </div>
         </div>
@@ -73,25 +74,34 @@
           <h2>专业技能</h2>
           <hr>
           <div class="progress mt-4">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%"> C</div>
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">C</div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"> C++</div>
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">C++</div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"> html</div>
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">Python</div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"> java</div>
+            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">Java</div>
+          </div>
+	  <div class="progress mt-4">
+            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%">Html</div>
+          </div>
+	 <div class="progress mt-4">
+            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="64" aria-valuemin="0" aria-valuemax="100" style="width: 64%">Unity</div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%"> ps</div>
+            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%">Photoshop</div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"> pr</div>
+            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">PremierePro</div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"> AE</div>
+            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">After Effect</div>
+          </div>
+	<div class="progress mt-4">
+            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">Illustrator</div>
           </div>
         </div>
       </div>
