--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -34,12 +34,14 @@
         <div class="col-md-4 col-sm-12">
           <div class="row justify-content-md-around m-1">
             <address>
-              姓名拼音：mayong<br>
-              出生日期：1998-08-22<br>
-              出生地：贵州省安顺市关岭县白水镇翁寨村硐口组<br>
-              <abbr title="Phone">电话号码:</abbr> 17685043634<br>
-              <abbr title="Phone">邮箱：1432448610@qq.com</abbr><br>
-	      <p>个人主页：</p><a href="https://yongma16.github.io/">https://yongma16.github.io/</a>
+              <p>姓名拼音：mayong</p>
+              <p>出生日期：1998-08-22</p>
+              <p>出生地：贵州省安顺市关岭县白水镇翁寨村硐口组</p>
+<!--               <abbr title="Phone">电话号码:</abbr> 17685043634<br> -->
+		    <p>电话号码:17685043634</p> 
+		    <p>邮箱：1432448610@qq.com</p>
+<!--               <abbr title="mail">邮箱：1432448610@qq.com</abbr><br> -->
+	      <p>个人主页：<a href="https://yongma16.github.io/">https://yongma16.github.io/</a></p>
             </address>
           </div>
         </div>
