--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -85,7 +85,7 @@
             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">Python</div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">Java</div>
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">Java</div>
           </div>
 	  <div class="progress mt-4">
             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%">Html</div>
@@ -94,7 +94,7 @@
             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="64" aria-valuemin="0" aria-valuemax="100" style="width: 64%">Unity</div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%">Photoshop</div>
+            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%">Photoshop</div>
           </div>
           <div class="progress mt-4">
             <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">PremierePro</div>
