--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -34,14 +34,14 @@
         <div class="col-md-4 col-sm-12">
           <div class="row justify-content-md-around m-1">
             <address>
-              <p>姓名拼音：mayong</p>
-              <p>出生日期：1998-08-22</p>
-              <p>出生地：贵州省安顺市关岭县白水镇翁寨村硐口组</p>
+              姓名拼音：mayong<br>
+              出生日期：1998-08-22<br>
+              出生地：贵州省安顺市关岭县白水镇翁寨村硐口组<br>
 <!--               <abbr title="Phone">电话号码:</abbr> 17685043634<br> -->
-		    <p>电话号码:17685043634</p> 
-		    <p>邮箱：1432448610@qq.com</p>
+		    电话号码:17685043634<br>
+		    邮箱：1432448610@qq.com<br>
 <!--               <abbr title="mail">邮箱：1432448610@qq.com</abbr><br> -->
-	      <p>个人主页：<a href="https://yongma16.github.io/">https://yongma16.github.io/</a></p>
+	      个人主页：<a href="https://yongma16.github.io/">https://yongma16.github.io/</a>>
             </address>
           </div>
         </div>
@@ -91,7 +91,7 @@
             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%">Html</div>
           </div>
 	 <div class="progress mt-4">
-            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="64" aria-valuemin="0" aria-valuemax="100" style="width: 64%">Unity</div>
+            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="64" aria-valuemin="0" aria-valuemax="100" style="width: 64%">Css</div>
           </div>
           <div class="progress mt-4">
             <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%">Photoshop</div>
