--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -41,7 +41,7 @@
 		    电话号码:17685043634<br>
 		    邮箱：1432448610@qq.com<br>
 <!--               <abbr title="mail">邮箱：1432448610@qq.com</abbr><br> -->
-	      个人主页：<a href="https://yongma16.github.io/">https://yongma16.github.io/</a>>
+	      个人主页：<a href="https://yongma16.github.io/">https://yongma16.github.io/</a>
             </address>
           </div>
         </div>
