--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -39,7 +39,7 @@
               出生地：贵州省安顺市关岭县白水镇翁寨村硐口组<br>
 <!--               <abbr title="Phone">电话号码:</abbr> 17685043634<br> -->
 		    电话号码:17685043634<br>
-		    邮箱：1432448610@qq.com<br>
+		    邮箱：ymacode@foxmail.com<br>
 <!--               <abbr title="mail">邮箱：1432448610@qq.com</abbr><br> -->
 	      个人主页：<a href="https://yongma16.github.io/">https://yongma16.github.io/</a>
             </address>
