--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
   </div>
 		
 <div id="doc1" style="left:400px;" class="doc">
-    <a style="margin-left:5px;" href="https://yongma16.github.io/" target="_blank">
+    <a style="margin-left:5px;" href="introduce/myhome.html" target="_blank">
       <span style="color: #fff;padding:10px 20px;">yma16个人博客</span>
     </a>
   </div>
 <div id="doc2" style="left:800px;" class="doc">
-    <a style="" href="https://yongma16.github.io/introduce/my_introduction.html" target="_blank">
+    <a style="" href="introduce/my_introduction.html" target="_blank">
       <span style="color: #fff;padding:10px 20px;">yma16个人简历</span>
     </a>
   </div>
