--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
       <span style="color: #fff;padding:10px 20px;">yma16个人简历</span>
     </a>
   </div>
-		<script src="../build/three.js"></script>
+		<script src="three-master/three.js"></script>
 
-		<script src="js/renderers/Projector.js"></script>
-		<script src="js/renderers/CanvasRenderer.js"></script>
+		<script src="three-master/Projector.js"></script>
+		<script src="three-master/CanvasRenderer.js"></script>
 
 		<script>
 
