--- a/introduce/myhome.html
+++ b/introduce/myhome.html
@@ -92,7 +92,7 @@
 	  &emsp;&emsp;<a style="font-weight:bold" href="https://weibo.com/u/5753833558">新浪微博</a><br><br>
 	  &emsp;&emsp;<a style="font-weight:bold" href="https://space.bilibili.com/173487425">哔哩哔哩</a><br><br>
 	  &emsp;&emsp;<a style="font-weight:bold" href="https://me.csdn.net/qq_38870145">CSDN</a>
-    <p class="hero_header"><a style="font-weight:bolder" href="introduce/my_introduction.html">我的简历</a></p>
+    <p class="hero_header"><a style="font-weight:bolder" href="my_introduction.html">我的简历</a></p>
 <!-- 	  <div class="button"><a href="https://yongma16.github.io/introduce/my_introduction.html">点击查看</a></div> -->
   </footer>
   <div class="copyright" color="FFFF">&copy;2020&<strong>ymacode</strong></div>
