--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>yma16个人主页</title>
+		<title>Yma16个人主页</title>
 		<meta charset="utf-8">
 		<link rel="shortcut icon" href="images/logo/my_logo.ico"/>
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -33,6 +33,9 @@
             }
 			.mytitle{
 			  font-size:25px;
+			  font-style:normal;
+/*			  font-family:Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", "sans-serif";*/
+			  font-family:Impact;
 			  text-align: center;
 			  top: 10px;
               z-index: 5;
@@ -67,7 +70,7 @@
 	
 	<body>
 		<div id="title" style="left:0px;" class="mytitle">
-      <span style="color: #fff;padding:60px 20px;">yma16个人主页</span>
+      <span style="color: #fff;padding:60px 20px;">Yma16个人主页</span>
   </div>
 <div id="declaration1" style="left:520px;" class="declaration">
       <span style="color: #fff;padding:10px 20px;">Stay hungry,Stay modest.</span>
