--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Yma16个人主页</title>
 		<meta charset="utf-8">
-		<link rel="shortcut icon" href="images/logo/my_logo.ico"/>
+		<link rel="shortcut icon" href="images/logo/logo.ico"/>
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
 			body {
