--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 	</head>
 	
 	<body>
-		<div id="title" style="left:0px;" class="mytitle">
+<div id="title" style="left:0px;" class="mytitle">
+      <img src="images/logo/M.ico" width="30" height="30"></img>
       <span style="color: #fff;padding:60px 20px;">Yma16个人主页</span>
   </div>
 <div id="declaration1" style="left:520px;" class="declaration">
