--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
 	</head>
 	
 	<body>
+		
+    <script>
+        function stop() {
+            return false;//防止查看日志文件
+        }
+        document.oncontextmenu = stop;
+    </script>
+		
 <div id="title" style="left:0px;" class="mytitle">
       <img src="images/logo/M.ico" width="30" height="30"></img>
       <span style="color: #fff;padding:60px 20px;">Yma16个人主页</span>
