防止浏览代码

--- a/introduce/myhome.html
+++ b/introduce/myhome.html
@@ -9,6 +9,14 @@
 <link href="../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">	
 </head>
 <body>
+
+    <script>
+        function stop() {
+            return false;//防止查看日志代码
+        }
+        document.oncontextmenu = stop;
+    </script>
+
 <!-- Main Container -->
 <div class="container"> 
   <!-- Header -->
