加一层安全

--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -10,6 +10,13 @@
     <link href="../css/bootstrap-4.2.1.css" rel="stylesheet">
   </head>
   <body>
+    <script>
+        function stop() {
+            return false;//防止看代码
+        }
+        document.oncontextmenu = stop;
+    </script>
+
     <div class="container">
       <hr>
       <div class="row">
